<resources>
    <string name="app_name">BetterChat</string>
    <string name="ConstantEmail">Email</string>
    <string name="ConstanteUsuario">Usuario</string>
    <string name="ConstantContraseña">Contraseña</string>
    <string name="ConstantContinuar">Continuar</string>
    <string name="ConstantConfirmaContraseña">Confirma tu Contraseña</string>
    <string name="ConstantInicioSesion">Iniciar Sesion</string>
    <string name="ConstantOlvidasteContraseña">¿Olvidaste tu Contraseña?</string>
    <string name="ConstantNoTienesCuenta">¿No tienes una Cuenta?</string>
    <string name="ConstanteRegistrarse">Crea una :)</string>
    <string name="ConstanteSeleccionFotoPerfil">Selecciona una Foto de Perfil</string>
    <string name="ConstanteSeleccionFotoPortada">Selecciona una Foto para tu Portada</string>
    <string name="ConstanteCambiaTuNombre">Cambia tu nombre</string>
    <string name="ConstanteCambiaTuBiografia">Cambia tu Biografia</string>
    <string name="ConstanteEscribeTuMood">Escribe tu mood...</string>
    <string name="ConstantePublicaTuMood">Publica tu mood</string>
    <string name="ConstanteBuscar">Buscar Usuario </string>
    <string name="ConstanteEligeFotoPerfil">Ahora elige la foto de perfil que mas te guste!</string>
    <string name="title_activity_mostrar_amigos">Activity_MostrarAmigos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>