<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrouser"
    tools:context=".Activity_RegistroUsuario">


    <EditText
        android:id="@+id/EditText_UsuarioRegistro"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="7dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ConstanteUsuario"
        android:textColor="#707070"
        app:layout_constraintBottom_toTopOf="@+id/EditText_EmailRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <EditText
        android:id="@+id/EditText_EmailRegistro"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="11dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ConstantEmail"
        android:textColor="#707070"
        app:layout_constraintBottom_toTopOf="@+id/EditText_PasswordRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/EditText_PasswordRegistro"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="28dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ConstantContraseña"
        android:textColor="#707070"
        app:layout_constraintBottom_toTopOf="@+id/button_RegistrarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_EmailRegistro" />

    <Button
        android:id="@+id/button_RegistrarUsuario"
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="183dp"
        android:backgroundTint="#0A4D68"
        android:text="@string/ConstantContinuar"
        android:textStyle="bold"
        app:iconTint="#0A4D68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="306dp"
        android:layout_height="66dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/EditText_UsuarioRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logobetterchat" />


</androidx.constraintlayout.widget.ConstraintLayout>