<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backvacio"
    tools:context=".Activity_SeteoFotoPerfil">

    <ImageView
        android:id="@+id/imageView_FotoPerfil"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/button_ElegirFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ElegirFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#0A4D68"
        android:text="@string/ConstanteSeleccionFotoPerfil"
        android:textStyle="bold"
        app:iconTint="#0A4D68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_FotoPerfil" />

    <Button
        android:id="@+id/button_ContinuarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="#0A4D68"
        android:text="@string/ConstantContinuar"
        android:textStyle="bold"
        app:iconTint="#0A4D68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ElegirFoto" />

    <TextView
        android:id="@+id/textView_SeteoFotoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="21dp"
        android:text="@string/ConstanteEligeFotoPerfil"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_FotoPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>